[package]
name = "steel-datafusion"
version = "0.1.0"
edition = "2021"

[dependencies]
steel-core = { version = "0.6.0", git = "https://github.com/mattwparas/steel.git", features = ["dylibs", "markdown", "stacker", "dylib-build", "sync"], branch = "mwp-expose-vm-methods" }
# steel-core = { version = "0.6.0", path = "/home/matt/code/steel/crates/steel-core", features = ["dylibs", "markdown", "stacker", "dylib-build", "sync"] }
steel-repl = { version = "0.6.0", git = "https://github.com/mattwparas/steel.git", branch = "mwp-expose-vm-methods" }
# steel-repl = { version = "0.6.0", path = "/home/matt/code/steel/crates/steel-repl" }
datafusion = "42.0.0"
tokio = { version = "1", features = ["full"] }


